Update Fix Cards box-shadow and background behind h3

--- a/ThirdPage.css
+++ b/ThirdPage.css
@@ -46,7 +46,7 @@
 
 .card2 .front {
     transform: perspective(600px) rotateY(0deg);
-    box-shadow: 0 5px 10px #000;
+    box-shadow: 0px 0px 5px 3px rgb(55, 55, 55);
 }
 
 .card2 .front img {
@@ -64,13 +64,13 @@
     width: 100%;
     line-height: 45px;
     color: #fff;
-    background: rgba(0, 0, 0, .4);
+    background: rgba(0, 0, 0, .6);
     text-align: center;
 }
 
 .card2 .back {
     transform: perspective(600px) rotateY(180deg);
-    background: rgb(0, 0, 0, 0.5) url(Employees/EmployeeBackgroundTemplate/CardBackgroundTemplate.png);
+    background: rgb(0, 0, 0, 0.6) url(Employees/EmployeeBackgroundTemplate/CardBackgroundTemplate.png);
     background-position: center;
     background-blend-mode: darken;
     background-size: cover;
@@ -81,7 +81,7 @@
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
-    box-shadow: 0 5px 10px #000;
+    box-shadow: 0px 0px 5px 3px rgb(55, 55, 55);
 }
 
 .card2 p {
